fix(基础设施): 完善 Java17 构建与容器开发链路
统一项目 Java 17 编译与测试约束，补齐 Testcontainers API 配置和 Flyway PostgreSQL 插件。

修复 JSONB 能力匹配查询和执行事件幂等落库问题，增加 Colima 环境脚本、Kind 配置及本地 PostgreSQL/NATS 清单。

验证结果：mvn -q test，184 个测试通过。